(chore): make app Git Hub Pages ready

--- a/package.json
+++ b/package.json
@@ -22,13 +22,9 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "frontend": "vite",
+    "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "backend": "ts-node server.ts",
-    "backend:prod": "node build/server.js",
-    "build:backend": "tsc",
-    "dev": "concurrently \"npm run backend\" \"npm run frontend\"",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -50,6 +46,7 @@
       "last 1 safari version"
     ]
   },
+  
   "devDependencies": {
     "@playwright/test": "^1.54.2",
     "@types/express": "^5.0.1",
